Regression: Windows-10 Switching Desktops locks Ctrl Key #100582

Closed
opened 2022-08-23 12:48:40 +02:00 by Julien Kaspar · 12 comments
Member

System Information
Operating system: Windows-10-10.0.19043-SP0 64 Bits
Graphics card: NVIDIA GeForce GTX 1060/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 516.59

Blender Version
Broken: version: 3.4.0 Alpha, branch: master, commit date: 2022-08-22 16:16, hash: 7f6cd405b9
Worked: version 3.3 Beta
Caused by 8bc76bf4b9

Short description of error
I often encountered while working on Windows, that from time to time the Ctrl key would get locked (always held) even though I am not pressing it. Repeatedly pressing and releasing the key would fix the issue.

Finally I found a way to reproduce the issue for me. I organise open windows into separate Desktops that I switch between regularly.
Whenever I switch between them, if Blender was the active window at the time, the Ctrl key would get stuck.
This is likely the case because the shortcut to switch Desktops is Ctrl + Windows Key + Left/Right Arrow.

I think this issue is specific to Blender and not just Windows 10, because other programs do not have this issue.

Exact steps for others to reproduce the error

  • Create a second Desktop on Windows 10
  • Open Blender on the first Desktop
  • Use Ctrl + Windows Key + Right Arrow to switch to the other Desktop
  • Switch back with Ctrl + Windows Key + Left Arrow
  • Use the middle mouse button to pan in the viewport

Instead of panning it will zoom in the viewport instead.

**System Information** Operating system: Windows-10-10.0.19043-SP0 64 Bits Graphics card: NVIDIA GeForce GTX 1060/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 516.59 **Blender Version** Broken: version: 3.4.0 Alpha, branch: master, commit date: 2022-08-22 16:16, hash: `7f6cd405b9` Worked: version 3.3 Beta Caused by 8bc76bf4b9 **Short description of error** I often encountered while working on Windows, that from time to time the `Ctrl` key would get locked (always held) even though I am not pressing it. Repeatedly pressing and releasing the key would fix the issue. Finally I found a way to reproduce the issue for me. I organise open windows into separate Desktops that I switch between regularly. Whenever I switch between them, if Blender was the active window at the time, the `Ctrl` key would get stuck. This is likely the case because the shortcut to switch Desktops is `Ctrl + Windows Key + Left/Right Arrow`. I think this issue is specific to Blender and not just Windows 10, because other programs do not have this issue. **Exact steps for others to reproduce the error** - Create a second Desktop on Windows 10 - Open Blender on the first Desktop - Use `Ctrl + Windows Key + Right Arrow` to switch to the other Desktop - Switch back with `Ctrl + Windows Key + Left Arrow` - Use the middle mouse button to pan in the viewport Instead of panning it will zoom in the viewport instead.
Author
Member

Added subscriber: @JulienKaspar

Added subscriber: @JulienKaspar
Member

Added subscriber: @PratikPB2123

Added subscriber: @PratikPB2123
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

I can confirm

Operating system: Windows-10-10.0.22000-SP0 64 Bits
Graphics card: NVIDIA GeForce RTX 3050 Laptop GPU/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 512.78```
I can confirm ```**System Information** Operating system: Windows-10-10.0.22000-SP0 64 Bits Graphics card: NVIDIA GeForce RTX 3050 Laptop GPU/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 512.78```
Member

Is probably a regression because I'm not able too repro it in 3.3 build.
@JulienKaspar, can you also check in beta build? And raise the priority if it's a regression.
(I won't be able to bisect before tomorrow)

Is probably a regression because I'm not able too repro it in 3.3 build. @JulienKaspar, can you also check in beta build? And raise the priority if it's a regression. (I won't be able to bisect before tomorrow)
Pratik Borhade changed title from Windows 10: Switching Desktops locks Ctrl Key to Regression: Windows-10 Switching Desktops locks Ctrl Key 2022-08-23 15:34:32 +02:00
Member

Added subscriber: @ideasman42

Added subscriber: @ideasman42
Member

Affected by 8bc76bf4b9
cc @ideasman42

Affected by 8bc76bf4b9 cc @ideasman42
Campbell Barton self-assigned this 2022-08-25 14:36:56 +02:00

While reverting 8bc76bf4b9 will resolve this issue, it seems existing logic to simulate key release events is failing for windows.

Are you pressing/releasing the right Control key?

Submitted D15782 which removes simulated key events and clears the event modifier directly, building on the build-bot, should be available at https://builder.blender.org/download/patch/ (on Windows) shortly.

While reverting 8bc76bf4b9 will resolve this issue, it seems existing logic to simulate key release events is failing for windows. Are you pressing/releasing the right Control key? Submitted [D15782](https://archive.blender.org/developer/D15782) which removes simulated key events and clears the event modifier directly, building on the build-bot, should be available at https://builder.blender.org/download/patch/ (on Windows) shortly.
Member

Applying D15782 manually has not solved the issue :/

Are you pressing/releasing the right Control key?

Even with left ctrl key issue is reproducible.

Applying [D15782](https://archive.blender.org/developer/D15782) manually has not solved the issue :/ > Are you pressing/releasing the right Control key? Even with left ctrl key issue is reproducible.

This is caused by GHOST/Win32 having it's own layer of modifier key handling which causes key modifier release events to be incorrectly ignored after the window is activated.
I'll prepare a fix shortly.

This is caused by GHOST/Win32 having it's own layer of modifier key handling which causes key modifier release events to be incorrectly ignored after the window is activated. I'll prepare a fix shortly.

This issue was referenced by 37d835f0bc

This issue was referenced by 37d835f0bca28a7cbf577385d9828636e7811cc5

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#100582
No description provided.