Fix T100582: Windows-10 Switching Desktops locks Ctrl Key

Regression in recent fix for T66088 [0]. caused by much older problem
introduced with [1] & [2].

Unlike other platforms, as of [1] GHOST/Win32 was keeping track of the
pressed modifier keys.

Since GHOST/Win32 cleared the modifier state on window activation [2]
and only changes to modifier state would generate key events, activating
the window and releasing the modifier would not send the release event.

Resolve this by removing the stored modifier state from GHOST/Win32,
always passing modifier press/release events through to Blender
(matching other GHOST back-ends).
Instead, use key-repeat detection to prevent repeated modifier keys
from being generated - an alternate solution to T26446.

[0]: 8bc76bf4b957c51ddc5a13c6305f05c64b218a27
[1]: d6b43fed313b60bb6a269680b3c5622955b8a690
[2]: 6b987910e43ff5f91512a3c361ea3141590d4e45